# discord_bot

./: Cargo.toml
assets/: image.html  pvp.css  style.css
src/: main.rs
templates/: body.html  header.html  pve.html  pvp.html  stats.html  user.html
templates/css/: box.css  stats.css  style.css  user.css
