[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Feresey <p.milko@npo-echelon.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.11.0"
cairo-rs = { version = "0.2.0", features = ["png"] }
rand = "0.8.4"
